# random-poem

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  poems.json
assets/static/: style.css
assets/templates/: 404.html  author.html  index.html  layout.html  poem.html  something_went_wrong.html
src/: api.rs  errors.rs  layers.rs  main.rs  middleware.rs  poem.rs  query.rs  random.rs  render.rs  site.rs
src/snapshots/: dial_a_poem__api__tests__can_get_specific_poem.snap  dial_a_poem__site__tests__can_get_specific_poem.snap  random_poem__site__tests__can_get_specific_poem.snap
static/: 404.html  index.html  style.css
