[package]
name = "dial-a-poem"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
rubenvy = "0.1.1"
maud = { version = "0.26.0", features = ["axum"] }
secrecy = "0.8.0"
sentry = { version = "0.34.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
    "tower",
    "tower-axum-matched-path",
    "tracing",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sqlx = { version = "0.8.0", default-features = false, features = [
    "sqlite",
    "macros",
    "runtime-tokio",
    "migrate",
] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
# Can't upgrade to tower 0.5 until tower-http is upgraded
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "fs",
    "request-id",
    "trace",
    "util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v7"] }
chrono = "0.4.38"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
http-body-util = "0.1.2"
insta = { version = "1.39.0", features = ["json"] }
tower = "0.4.13"
