[package]
name = "random-poem"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.8.1", features = ["macros"] }
rubenvy = "0.1.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sqlx = { version = "0.8.0", default-features = false, features = [
    "sqlite",
    "macros",
    "runtime-tokio",
    "migrate",
] }
thiserror = "2.0.11"
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
    "fs",
    "request-id",
    "trace",
    "util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v7"] }
chrono = "0.4.38"
rand = { version = "0.9.0", features = ["small_rng"] }
rinja = "0.3.5"
secrecy = "0.10.3"

[dev-dependencies]
http-body-util = "0.1.2"
insta = { version = "1.39.0", features = ["json"] }
